Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11307

[memcached] Function call argument is an uninitialized value

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 3.0
    • 3.0
    • storage-engine
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      Bug reported by the clang static analyzer.

      Description: Function call argument is an uninitialized value
      File: /Users/dave/repos/couchbase/server/source/memcached/daemon/memcached.c
      Line: 2460

      See attached report.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            drigby Dave Rigby (Inactive)
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty