MB-11307 Initialize inflated_length

Clang static analyser complains that inflaged_length can be used
before it's initialized. I've checked the code and I believe it is
safe, and this isn't possible. However there's no harm in initializing
inflated_length, which has the benefit of squelching the warning.

Change-Id: Ibfb533dc32f6bee4948c40afba8505e1edd108bf
Reviewed-on: http://review.couchbase.org/37837
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: Trond Norbye <trond.norbye@gmail.com>